--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ vars.ALIYUN_ACR_IMAGE_NAME }}:${{ inputs.tag }}
+      run: docker build . --file Dockerfile-Jupyter --tag ${{ vars.ALIYUN_ACR_IMAGE_NAME }}:${{ inputs.tag }}
 
     - name: Alibaba Cloud Container Registry (ACR) Login
     # You may pin to the exact commit or the version.
