--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,6 +2,10 @@ name: Docker Image CI
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        required: true
+        type: string
 
 jobs:
 
